# cparse

./: .gitignore  CMakeLists.txt  IO.cpp  IO.h  Makefile  PFClient.cpp  PFClient.h  PFLog.h  PFObject.cpp  PFObject.test.cpp  PFUser.cpp  Parse.cpp  Protocol.cpp  Protocol.h  README.md  Util.cpp  Util.h  acl.c  client.cpp  client.h  cparse.sublime-project  cparse.sublime-workspace  cparse.test.c  cparse.test.cpp  cparse.test.json  error.c  io.c  io.h  log.h  object.c  object.cpp  object.test.c  object.test.cpp  parse.test.cpp  parse.test.json  premake4.lua  table.c  table.test.c  user.c  user.cpp  (+3 more)
cparse/: PFError.h  PFException.h  PFObject.h  PFUser.h  PFValue.h  Parse.h  acl.h  clientinterface.h  defines.h  error.h  exception.h  json.h  object.h  parse.h  table.h  user.h  value.h
cparse/op/: array.h  decrement.h  increment.h
cparse/type/: bytes.h  date.h  file.h  geopoint.h  parsetype.h  pointer.h
legacy/: .gitignore  CMakeLists.txt  README.md  acl.c  client.c  client.h  cparse.test.c  defines.cpp  error.c  io.c  io.h  json.c  json.test.c  object.c  object.test.c  parse.c  parse.test.c  parse.test.json  premake4.lua  protocol.h  query.c  query.test.c  types.c  user.c  util.c  util.test.c
legacy/cparse/: acl.h  defines.h  error.h  json.h  object.h  operator.h  parse.h  query.h  types.h  user.h  util.h  value.h
legacy/src/: CMakeLists.txt  acl.c  client.c  error.c  object.c  types.c
legacy/src/cparse/: defines.h  error.h  operator.h  parse.h  query.h  user.h  util.h
legacy/tests/: CMakeLists.txt  cparse.test.c  object.test.c  parse.test.c  query.test.c  util.test.c
op/: array.cpp  decrement.cpp  increment.cpp
src/: CMakeLists.txt  bytes.cpp  client.cpp  client.h  date.cpp  decrement.cpp  file.cpp  geopoint.cpp  increment.cpp  object.cpp  parse.cpp  pointer.cpp  protocol.h  user.cpp
src/cparse/: exception.h  json.h  object.h  user.h
src/cparse/op/: array.h  decrement.h  increment.h
src/cparse/type/: date.h  file.h  parsetype.h
tests/: CMakeLists.txt  object.test.cpp  parse.test.cpp  user.test.cpp
type/: bytes.cpp  date.cpp  file.cpp  geopoint.cpp  pointer.cpp
